<?xml version="1.0" encoding="utf-8"?>

<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:fitsSystemWindows="true"
    tools:context="artur.pl.deezertestapp.View.ArtistDetailActivity">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/app_bar_layout"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:fitsSystemWindows="true">

        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/collapsing_toolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            app:contentScrim="?attr/colorPrimary"
            app:expandedTitleMarginStart="48dp"
            app:expandedTitleMarginEnd="64dp"
            app:expandedTitleTextAppearance="@style/ExpandedText"
            app:collapsedTitleTextAppearance="@style/CollapsedText"
            android:fitsSystemWindows="true">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <ImageView
                    android:id="@+id/bgImageView"
                    android:layout_width="match_parent"
                    android:layout_height="300dp"
                    android:scaleType="centerCrop"
                    android:fitsSystemWindows="true"
                    app:srcCompat="@mipmap/ic_launcher_round"
                    app:layout_collapseMode="parallax"/>

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentStart="true"
                    android:background="@drawable/artist_detail_gradient" />
            </RelativeLayout>
            <android.support.v7.widget.Toolbar
                android:id="@+id/my_toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:theme="@style/ToolbarColored"
                app:layout_collapseMode="pin" />

        </android.support.design.widget.CollapsingToolbarLayout>

    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:id="@+id/scroll"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipToPadding="false"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <android.support.v7.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:cardElevation="@dimen/spacing_medium"
                    app:cardUseCompatPadding="true">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/spacing_large"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/title"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/tv_informations"
                            android:textAppearance="@style/TextAppearance.AppCompat.Headline"
                            android:textColor="@color/colorAccent" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:layout_marginTop="4dp"
                            android:background="@color/colorSecondaryText" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="@dimen/spacing_medium"
                            android:layout_marginTop="@dimen/spacing_medium"
                            android:orientation="horizontal"
                            android:weightSum="1">

                            <TextView
                                android:id="@+id/noAlbumsTextView"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_weight="0.5"
                                android:drawablePadding="4dp"
                                android:drawableStart="@drawable/ic_video_library_black_24dp"
                                android:drawableTint="@color/colorSecondaryText"
                                android:text="@string/tv_no_albums" />

                            <TextView
                                android:id="@+id/noFansTextView"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_weight="0.5"
                                android:drawablePadding="4dp"
                                android:drawableStart="@drawable/ic_group_black_24dp"
                                android:drawableTint="@color/colorSecondaryText"
                                android:text="@string/tv_no_fans" />
                        </LinearLayout>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:drawablePadding="4dp"
                            android:drawableStart="@drawable/ic_book_black_24dp"
                            android:drawableTint="@color/colorSecondaryText"
                            android:text="@string/tv_biography" />

                        <TextView
                            android:id="@+id/biographyTextView"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="4dp"
                            android:layout_weight="0.5"
                            android:text="@string/lorem_ipsum" />

                    </LinearLayout>
                </android.support.v7.widget.CardView>
                <TextView
                    android:id="@+id/albumsTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="24dp"
                    android:layout_marginStart="24dp"
                    android:layout_marginBottom="8dp"
                    android:text="@string/tv_albums"
                    android:textAppearance="@style/TextAppearance.AppCompat.Headline"
                    android:textColor="@color/colorAccent"/>

                <android.support.v4.view.ViewPager
                    android:background="@color/colorAccent"
                    android:layout_width="match_parent"
                    android:layout_height="200dp" />
            </LinearLayout>
        </FrameLayout>

    </android.support.v4.widget.NestedScrollView>

</android.support.design.widget.CoordinatorLayout>